<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text=""
        android:background="#efefef"
        android:textSize="48sp"
        android:maxLength="12"
        android:gravity="end|bottom|center_vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="1dp">
        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/seven"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"/>
        <Button
            android:id="@+id/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/eight"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
           />
        <Button
            android:id="@+id/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:layout_marginStart="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="1dp"
        >
        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/four"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"/>
        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:layout_marginStart="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="1dp">
        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"/>
        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/subtract"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:layout_marginStart="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="1dp">
        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/decimal"
            android:layout_weight="1"
            android:onClick="onDecimal"
            android:layout_marginStart="1dp"/>
        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:layout_weight="1"
            android:onClick="onClear"
            android:layout_marginStart="1dp"
            />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:layout_marginStart="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="1dp">
        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equals"
            android:layout_weight="1"
            android:onClick="onEquals"
            android:layout_marginStart="1dp"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>